# EasyOpenCL

./: .gitignore  CMakeLists.txt  README.md  run.sh
cmake/modules/: FindOpenCL.cmake
example/: CMakeLists.txt  aggregate.cl  arithmetic.cl  cube.cl  generate.cl  main.cpp  simple.cpp  simplekernel.cl  square.cl  sum.cl
example/VC++2013/: EasyOpenCL.opensdf  EasyOpenCL.sln  README.md
example/VC++2013/EasyOpenCL/: .gitignore  EasyOpenCL.vcxproj  EasyOpenCL.vcxproj.filters  arithmetic.cl  easyopencl.cpp  easyopencl.h  kernel.cl  kernelFunction.cl  main.cpp  sum.cl
include/: CMakeLists.txt  boundvalue.h  easyopencl.h  errorhandler.h  kernel.h  mac.clh  opencl-crossplatform.h
kernels/: CMakeLists.txt  aggregatefloat.cl  cube.cl  cubefloat.cl  generate.cl  generatefloat.cl  macfloat.cl  simplekernel.cl  squarefloat.cl
src/: CMakeLists.txt  README.md  boundvalue.cpp  easyopencl.cpp  errorhandler.cpp  kernel.cpp
